packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_doc_coverage_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_intelligence.rs
assertion_line: 33
expression: value
---
{
  "covered_symbols": 4,
  "docs": [
    {
      "doc_id": "repo:coverage-sample:doc:README.md",
      "format": "md",
      "path": "README.md",
      "repo_id": "coverage-sample",
      "title": "README.md"
    },
    {
      "doc_id": "repo:coverage-sample:doc:docs/Problem.md",
      "format": "md",
      "path": "docs/Problem.md",
      "repo_id": "coverage-sample",
      "title": "Problem"
    },
    {
      "doc_id": "repo:coverage-sample:doc:docs/solve.md",
      "format": "md",
      "path": "docs/solve.md",
      "repo_id": "coverage-sample",
      "title": "solve"
    },
    {
      "doc_id": "repo:coverage-sample:doc:src/CoveragePkg.jl#symbol-id:repo:coverage-sample:symbol:CoveragePkg.Problem",
      "doc_target": {
        "kind": "symbol",
        "line_end": 13,
        "line_start": 11,
        "name": "Problem",
        "path": "CoveragePkg.Problem"
      },
      "format": "julia_docstring",
      "path": "src/CoveragePkg.jl#symbol-id:repo:coverage-sample:symbol:CoveragePkg.Problem",
      "repo_id": "coverage-sample",
      "title": "Problem"
    },
    {
      "doc_id": "repo:coverage-sample:doc:src/CoveragePkg.jl#symbol-id:repo:coverage-sample:symbol:CoveragePkg.solve",
      "doc_target": {
        "kind": "symbol",
        "line_end": 20,
        "line_start": 18,
        "name": "solve",
        "path": "CoveragePkg.solve"
      },
      "format": "julia_docstring",
      "path": "src/CoveragePkg.jl#symbol-id:repo:coverage-sample:symbol:CoveragePkg.solve",
      "repo_id": "coverage-sample",
      "title": "solve"
    },
    {
      "doc_id": "repo:coverage-sample:doc:src/solvers.jl#symbol-id:repo:coverage-sample:symbol:CoveragePkg.fastsolve",
      "doc_target": {
        "kind": "symbol",
        "line_end": 5,
        "line_start": 5,
        "name": "fastsolve",
        "path": "fastsolve"
      },
      "format": "julia_docstring",
      "path": "src/solvers.jl#symbol-id:repo:coverage-sample:symbol:CoveragePkg.fastsolve",
      "repo_id": "coverage-sample",
      "title": "fastsolve"
    },
    {
      "doc_id": "repo:coverage-sample:doc:src/nested/extra.jl#symbol-id:repo:coverage-sample:symbol:CoveragePkg.ExtraProblem",
      "doc_target": {
        "kind": "symbol",
        "line_end": 7,
        "line_start": 5,
        "name": "ExtraProblem",
        "path": "ExtraProblem"
      },
      "format": "julia_docstring",
      "path": "src/nested/extra.jl#symbol-id:repo:coverage-sample:symbol:CoveragePkg.ExtraProblem",
      "repo_id": "coverage-sample",
      "title": "ExtraProblem"
    }
  ],
  "hierarchical_uri": "repo://coverage-sample",
  "hierarchy": [
    "repo",
    "coverage-sample"
  ],
  "module_id": "repo:coverage-sample:module:CoveragePkg",
  "repo_id": "coverage-sample",
  "uncovered_symbols": 0
}
