packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_example_search_cli_json.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_intelligence.rs
assertion_line: 129
expression: value
---
{
  "example_hits": [
    {
      "example": {
        "example_id": "repo:example-sample:example:test/runtests.jl",
        "path": "test/runtests.jl",
        "repo_id": "example-sample",
        "summary": null,
        "title": "runtests"
      },
      "hierarchical_uri": "wendao://repo/unknown/example-sample/examples/test:runtests.jl/repo:example-sample:example:test/runtests.jl",
      "hierarchy": [
        "test",
        "runtests.jl"
      ],
      "projection_page_ids": [
        "repo:example-sample:projection:howto:example:repo:example-sample:example:test/runtests.jl"
      ],
      "rank": 1,
      "saliency_score": 0.0,
      "score": 0.8181818181818182
    }
  ],
  "examples": [
    {
      "example_id": "repo:example-sample:example:test/runtests.jl",
      "path": "test/runtests.jl",
      "repo_id": "example-sample",
      "summary": null,
      "title": "runtests"
    }
  ],
  "repo_id": "example-sample"
}
