packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_module_search_cli_json.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_intelligence.rs
expression: value
---
{
  "repo_id": "cli-module",
  "modules": [
    {
      "repo_id": "cli-module",
      "module_id": "repo:cli-module:module:CliModulePkg",
      "qualified_name": "CliModulePkg",
      "path": "src/CliModulePkg.jl"
    }
  ],
  "module_hits": [
    {
      "module": {
        "repo_id": "cli-module",
        "module_id": "repo:cli-module:module:CliModulePkg",
        "qualified_name": "CliModulePkg",
        "path": "src/CliModulePkg.jl"
      },
      "score": 0.25,
      "rank": 1,
      "saliency_score": 1.0,
      "hierarchical_uri": "wendao://repo/unknown/cli-module/api/src:CliModulePkg.jl/repo:cli-module:module:CliModulePkg",
      "hierarchy": [
        "src",
        "CliModulePkg.jl"
      ],
      "implicit_backlinks": [
        "repo:cli-module:doc:README.md"
      ],
      "implicit_backlink_items": [
        {
          "id": "repo:cli-module:doc:README.md",
          "title": "README.md",
          "path": "README.md",
          "kind": "documents"
        }
      ],
      "projection_page_ids": [
        "repo:cli-module:projection:explanation:doc:repo:cli-module:doc:README.md",
        "repo:cli-module:projection:reference:module:repo:cli-module:module:CliModulePkg",
        "repo:cli-module:projection:reference:symbol:repo:cli-module:symbol:CliModulePkg.ExtraProblem",
        "repo:cli-module:projection:reference:symbol:repo:cli-module:symbol:CliModulePkg.Problem",
        "repo:cli-module:projection:reference:symbol:repo:cli-module:symbol:CliModulePkg.fastsolve",
        "repo:cli-module:projection:reference:symbol:repo:cli-module:symbol:CliModulePkg.solve"
      ]
    }
  ]
}
