packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_overview_analysis.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_intelligence.rs
assertion_line: 33
expression: value
---
{
  "analysis": {
    "diagnostics": [],
    "docs": [
      {
        "doc_id": "repo:sample:doc:README.md",
        "format": "md",
        "path": "README.md",
        "repo_id": "sample",
        "title": "README.md"
      },
      {
        "doc_id": "repo:sample:doc:docs/guide.md",
        "format": "md",
        "path": "docs/guide.md",
        "repo_id": "sample",
        "title": "guide"
      },
      {
        "doc_id": "repo:sample:doc:src/SamplePkg.jl#symbol-id:repo:sample:symbol:SamplePkg.Problem",
        "doc_target": {
          "kind": "symbol",
          "line_end": 13,
          "line_start": 11,
          "name": "Problem",
          "path": "SamplePkg.Problem"
        },
        "format": "julia_docstring",
        "path": "src/SamplePkg.jl#symbol-id:repo:sample:symbol:SamplePkg.Problem",
        "repo_id": "sample",
        "title": "Problem"
      },
      {
        "doc_id": "repo:sample:doc:src/SamplePkg.jl#symbol-id:repo:sample:symbol:SamplePkg.solve",
        "doc_target": {
          "kind": "symbol",
          "line_end": 20,
          "line_start": 18,
          "name": "solve",
          "path": "SamplePkg.solve"
        },
        "format": "julia_docstring",
        "path": "src/SamplePkg.jl#symbol-id:repo:sample:symbol:SamplePkg.solve",
        "repo_id": "sample",
        "title": "solve"
      },
      {
        "doc_id": "repo:sample:doc:src/solvers.jl#symbol-id:repo:sample:symbol:SamplePkg.fastsolve",
        "doc_target": {
          "kind": "symbol",
          "line_end": 5,
          "line_start": 5,
          "name": "fastsolve",
          "path": "fastsolve"
        },
        "format": "julia_docstring",
        "path": "src/solvers.jl#symbol-id:repo:sample:symbol:SamplePkg.fastsolve",
        "repo_id": "sample",
        "title": "fastsolve"
      },
      {
        "doc_id": "repo:sample:doc:src/nested/extra.jl#symbol-id:repo:sample:symbol:SamplePkg.ExtraProblem",
        "doc_target": {
          "kind": "symbol",
          "line_end": 7,
          "line_start": 5,
          "name": "ExtraProblem",
          "path": "ExtraProblem"
        },
        "format": "julia_docstring",
        "path": "src/nested/extra.jl#symbol-id:repo:sample:symbol:SamplePkg.ExtraProblem",
        "repo_id": "sample",
        "title": "ExtraProblem"
      }
    ],
    "examples": [
      {
        "example_id": "repo:sample:example:examples/basic.jl",
        "path": "examples/basic.jl",
        "repo_id": "sample",
        "summary": null,
        "title": "basic"
      },
      {
        "example_id": "repo:sample:example:test/runtests.jl",
        "path": "test/runtests.jl",
        "repo_id": "sample",
        "summary": null,
        "title": "runtests"
      }
    ],
    "modules": [
      {
        "module_id": "repo:sample:module:SamplePkg",
        "path": "src/SamplePkg.jl",
        "qualified_name": "SamplePkg",
        "repo_id": "sample"
      }
    ],
    "relations": [
      {
        "kind": "uses",
        "repo_id": "sample",
        "source_id": "repo:sample:module:SamplePkg",
        "target_id": "external:LinearAlgebra"
      },
      {
        "kind": "uses",
        "repo_id": "sample",
        "source_id": "repo:sample:module:SamplePkg",
        "target_id": "external:SciMLBase"
      },
      {
        "kind": "documents",
        "repo_id": "sample",
        "source_id": "repo:sample:doc:src/SamplePkg.jl#symbol-id:repo:sample:symbol:SamplePkg.Problem",
        "target_id": "repo:sample:symbol:SamplePkg.Problem"
      },
      {
        "kind": "documents",
        "repo_id": "sample",
        "source_id": "repo:sample:doc:src/SamplePkg.jl#symbol-id:repo:sample:symbol:SamplePkg.solve",
        "target_id": "repo:sample:symbol:SamplePkg.solve"
      },
      {
        "kind": "documents",
        "repo_id": "sample",
        "source_id": "repo:sample:doc:src/solvers.jl#symbol-id:repo:sample:symbol:SamplePkg.fastsolve",
        "target_id": "repo:sample:symbol:SamplePkg.fastsolve"
      },
      {
        "kind": "documents",
        "repo_id": "sample",
        "source_id": "repo:sample:doc:src/nested/extra.jl#symbol-id:repo:sample:symbol:SamplePkg.ExtraProblem",
        "target_id": "repo:sample:symbol:SamplePkg.ExtraProblem"
      },
      {
        "kind": "contains",
        "repo_id": "sample",
        "source_id": "repo:sample",
        "target_id": "repo:sample:module:SamplePkg"
      },
      {
        "kind": "declares",
        "repo_id": "sample",
        "source_id": "repo:sample:module:SamplePkg",
        "target_id": "repo:sample:symbol:SamplePkg.ExtraProblem"
      },
      {
        "kind": "declares",
        "repo_id": "sample",
        "source_id": "repo:sample:module:SamplePkg",
        "target_id": "repo:sample:symbol:SamplePkg.Problem"
      },
      {
        "kind": "declares",
        "repo_id": "sample",
        "source_id": "repo:sample:module:SamplePkg",
        "target_id": "repo:sample:symbol:SamplePkg.fastsolve"
      },
      {
        "kind": "declares",
        "repo_id": "sample",
        "source_id": "repo:sample:module:SamplePkg",
        "target_id": "repo:sample:symbol:SamplePkg.solve"
      },
      {
        "kind": "contains",
        "repo_id": "sample",
        "source_id": "repo:sample",
        "target_id": "repo:sample:example:examples/basic.jl"
      },
      {
        "kind": "contains",
        "repo_id": "sample",
        "source_id": "repo:sample",
        "target_id": "repo:sample:example:test/runtests.jl"
      },
      {
        "kind": "contains",
        "repo_id": "sample",
        "source_id": "repo:sample",
        "target_id": "repo:sample:doc:README.md"
      },
      {
        "kind": "contains",
        "repo_id": "sample",
        "source_id": "repo:sample",
        "target_id": "repo:sample:doc:docs/guide.md"
      },
      {
        "kind": "contains",
        "repo_id": "sample",
        "source_id": "repo:sample",
        "target_id": "repo:sample:doc:src/SamplePkg.jl#symbol-id:repo:sample:symbol:SamplePkg.Problem"
      },
      {
        "kind": "contains",
        "repo_id": "sample",
        "source_id": "repo:sample",
        "target_id": "repo:sample:doc:src/SamplePkg.jl#symbol-id:repo:sample:symbol:SamplePkg.solve"
      },
      {
        "kind": "contains",
        "repo_id": "sample",
        "source_id": "repo:sample",
        "target_id": "repo:sample:doc:src/solvers.jl#symbol-id:repo:sample:symbol:SamplePkg.fastsolve"
      },
      {
        "kind": "contains",
        "repo_id": "sample",
        "source_id": "repo:sample",
        "target_id": "repo:sample:doc:src/nested/extra.jl#symbol-id:repo:sample:symbol:SamplePkg.ExtraProblem"
      },
      {
        "kind": "documents",
        "repo_id": "sample",
        "source_id": "repo:sample:doc:README.md",
        "target_id": "repo:sample:module:SamplePkg"
      }
    ],
    "repository": {
      "dependencies": [
        "LinearAlgebra",
        "SciMLBase"
      ],
      "name": "SamplePkg",
      "path": "[repo-root]",
      "repo_id": "sample",
      "revision": "[revision]",
      "url": "https://example.invalid/xiuxian-wendao/samplepkg.git",
      "uuid": "12345678-1234-1234-1234-123456789abc",
      "version": "0.1.0"
    },
    "symbols": [
      {
        "attributes": {
          "parser_kind": "type",
          "top_level": "true",
          "type_kind": "struct"
        },
        "audit_status": "unreviewed",
        "kind": "type",
        "line_end": 7,
        "line_start": 5,
        "module_id": "repo:sample:module:SamplePkg",
        "name": "ExtraProblem",
        "path": "src/nested/extra.jl",
        "qualified_name": "SamplePkg.ExtraProblem",
        "repo_id": "sample",
        "signature": "struct ExtraProblem",
        "symbol_id": "repo:sample:symbol:SamplePkg.ExtraProblem",
        "verification_state": "verified"
      },
      {
        "attributes": {
          "module_kind": "module",
          "module_name": "SamplePkg",
          "module_path": "SamplePkg",
          "owner_kind": "module",
          "owner_name": "SamplePkg",
          "owner_path": "SamplePkg",
          "parser_kind": "type",
          "top_level": "true",
          "type_kind": "struct"
        },
        "audit_status": "unreviewed",
        "kind": "type",
        "line_end": 13,
        "line_start": 11,
        "module_id": "repo:sample:module:SamplePkg",
        "name": "Problem",
        "path": "src/SamplePkg.jl",
        "qualified_name": "SamplePkg.Problem",
        "repo_id": "sample",
        "signature": "struct Problem",
        "symbol_id": "repo:sample:symbol:SamplePkg.Problem",
        "verification_state": "verified"
      },
      {
        "attributes": {
          "function_has_varargs": "false",
          "function_keyword_arity": "0",
          "function_positional_arity": "1",
          "parser_kind": "function",
          "top_level": "true"
        },
        "audit_status": "unreviewed",
        "kind": "function",
        "line_end": 5,
        "line_start": 5,
        "module_id": "repo:sample:module:SamplePkg",
        "name": "fastsolve",
        "path": "src/solvers.jl",
        "qualified_name": "SamplePkg.fastsolve",
        "repo_id": "sample",
        "signature": "fastsolve(problem::Problem) = problem.x",
        "symbol_id": "repo:sample:symbol:SamplePkg.fastsolve",
        "verification_state": "verified"
      },
      {
        "attributes": {
          "function_has_varargs": "false",
          "function_keyword_arity": "0",
          "function_positional_arity": "1",
          "module_kind": "module",
          "module_name": "SamplePkg",
          "module_path": "SamplePkg",
          "owner_kind": "module",
          "owner_name": "SamplePkg",
          "owner_path": "SamplePkg",
          "parser_kind": "function",
          "top_level": "true"
        },
        "audit_status": "unreviewed",
        "kind": "function",
        "line_end": 20,
        "line_start": 18,
        "module_id": "repo:sample:module:SamplePkg",
        "name": "solve",
        "path": "src/SamplePkg.jl",
        "qualified_name": "SamplePkg.solve",
        "repo_id": "sample",
        "signature": "solve(problem::Problem)",
        "symbol_id": "repo:sample:symbol:SamplePkg.solve",
        "verification_state": "verified"
      }
    ]
  },
  "overview": {
    "display_name": "SamplePkg",
    "doc_count": 6,
    "example_count": 2,
    "hierarchical_uri": "repo://sample",
    "hierarchy": [
      "repo",
      "sample"
    ],
    "module_count": 1,
    "repo_id": "sample",
    "revision": "[revision]",
    "symbol_count": 4
  }
}
