packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_overview_cli_json.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_intelligence.rs
assertion_line: 33
expression: value
---
{
  "display_name": "CliPkg",
  "doc_count": 6,
  "example_count": 2,
  "hierarchical_uri": "repo://cli-sample",
  "hierarchy": [
    "repo",
    "cli-sample"
  ],
  "module_count": 1,
  "repo_id": "cli-sample",
  "revision": "[revision]",
  "symbol_count": 4
}
