packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_overview_fallback.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_intelligence.rs
assertion_line: 33
expression: value
---
{
  "diagnostics": [
    {
      "line": 0,
      "message": "expected root file `src/FallbackPkg.jl` was not found; using `Other.jl` instead",
      "path": "src/Other.jl",
      "repo_id": "fallback",
      "severity": "warning"
    }
  ],
  "docs": [
    {
      "doc_id": "repo:fallback:doc:README.md",
      "format": "md",
      "path": "README.md",
      "repo_id": "fallback",
      "title": "README.md"
    },
    {
      "doc_id": "repo:fallback:doc:docs/guide.md",
      "format": "md",
      "path": "docs/guide.md",
      "repo_id": "fallback",
      "title": "guide"
    },
    {
      "doc_id": "repo:fallback:doc:src/Other.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.Problem",
      "doc_target": {
        "kind": "symbol",
        "line_end": 13,
        "line_start": 11,
        "name": "Problem",
        "path": "FallbackPkgAlt.Problem"
      },
      "format": "julia_docstring",
      "path": "src/Other.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.Problem",
      "repo_id": "fallback",
      "title": "Problem"
    },
    {
      "doc_id": "repo:fallback:doc:src/Other.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.solve",
      "doc_target": {
        "kind": "symbol",
        "line_end": 20,
        "line_start": 18,
        "name": "solve",
        "path": "FallbackPkgAlt.solve"
      },
      "format": "julia_docstring",
      "path": "src/Other.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.solve",
      "repo_id": "fallback",
      "title": "solve"
    },
    {
      "doc_id": "repo:fallback:doc:src/solvers.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.fastsolve",
      "doc_target": {
        "kind": "symbol",
        "line_end": 5,
        "line_start": 5,
        "name": "fastsolve",
        "path": "fastsolve"
      },
      "format": "julia_docstring",
      "path": "src/solvers.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.fastsolve",
      "repo_id": "fallback",
      "title": "fastsolve"
    },
    {
      "doc_id": "repo:fallback:doc:src/nested/extra.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.ExtraProblem",
      "doc_target": {
        "kind": "symbol",
        "line_end": 7,
        "line_start": 5,
        "name": "ExtraProblem",
        "path": "ExtraProblem"
      },
      "format": "julia_docstring",
      "path": "src/nested/extra.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.ExtraProblem",
      "repo_id": "fallback",
      "title": "ExtraProblem"
    }
  ],
  "examples": [
    {
      "example_id": "repo:fallback:example:examples/basic.jl",
      "path": "examples/basic.jl",
      "repo_id": "fallback",
      "summary": null,
      "title": "basic"
    },
    {
      "example_id": "repo:fallback:example:test/runtests.jl",
      "path": "test/runtests.jl",
      "repo_id": "fallback",
      "summary": null,
      "title": "runtests"
    }
  ],
  "modules": [
    {
      "module_id": "repo:fallback:module:FallbackPkgAlt",
      "path": "src/Other.jl",
      "qualified_name": "FallbackPkgAlt",
      "repo_id": "fallback"
    }
  ],
  "relations": [
    {
      "kind": "uses",
      "repo_id": "fallback",
      "source_id": "repo:fallback:module:FallbackPkgAlt",
      "target_id": "external:LinearAlgebra"
    },
    {
      "kind": "uses",
      "repo_id": "fallback",
      "source_id": "repo:fallback:module:FallbackPkgAlt",
      "target_id": "external:SciMLBase"
    },
    {
      "kind": "documents",
      "repo_id": "fallback",
      "source_id": "repo:fallback:doc:src/Other.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.Problem",
      "target_id": "repo:fallback:symbol:FallbackPkgAlt.Problem"
    },
    {
      "kind": "documents",
      "repo_id": "fallback",
      "source_id": "repo:fallback:doc:src/Other.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.solve",
      "target_id": "repo:fallback:symbol:FallbackPkgAlt.solve"
    },
    {
      "kind": "documents",
      "repo_id": "fallback",
      "source_id": "repo:fallback:doc:src/solvers.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.fastsolve",
      "target_id": "repo:fallback:symbol:FallbackPkgAlt.fastsolve"
    },
    {
      "kind": "documents",
      "repo_id": "fallback",
      "source_id": "repo:fallback:doc:src/nested/extra.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.ExtraProblem",
      "target_id": "repo:fallback:symbol:FallbackPkgAlt.ExtraProblem"
    },
    {
      "kind": "contains",
      "repo_id": "fallback",
      "source_id": "repo:fallback",
      "target_id": "repo:fallback:module:FallbackPkgAlt"
    },
    {
      "kind": "declares",
      "repo_id": "fallback",
      "source_id": "repo:fallback:module:FallbackPkgAlt",
      "target_id": "repo:fallback:symbol:FallbackPkgAlt.ExtraProblem"
    },
    {
      "kind": "declares",
      "repo_id": "fallback",
      "source_id": "repo:fallback:module:FallbackPkgAlt",
      "target_id": "repo:fallback:symbol:FallbackPkgAlt.Problem"
    },
    {
      "kind": "declares",
      "repo_id": "fallback",
      "source_id": "repo:fallback:module:FallbackPkgAlt",
      "target_id": "repo:fallback:symbol:FallbackPkgAlt.fastsolve"
    },
    {
      "kind": "declares",
      "repo_id": "fallback",
      "source_id": "repo:fallback:module:FallbackPkgAlt",
      "target_id": "repo:fallback:symbol:FallbackPkgAlt.solve"
    },
    {
      "kind": "contains",
      "repo_id": "fallback",
      "source_id": "repo:fallback",
      "target_id": "repo:fallback:example:examples/basic.jl"
    },
    {
      "kind": "contains",
      "repo_id": "fallback",
      "source_id": "repo:fallback",
      "target_id": "repo:fallback:example:test/runtests.jl"
    },
    {
      "kind": "contains",
      "repo_id": "fallback",
      "source_id": "repo:fallback",
      "target_id": "repo:fallback:doc:README.md"
    },
    {
      "kind": "contains",
      "repo_id": "fallback",
      "source_id": "repo:fallback",
      "target_id": "repo:fallback:doc:docs/guide.md"
    },
    {
      "kind": "contains",
      "repo_id": "fallback",
      "source_id": "repo:fallback",
      "target_id": "repo:fallback:doc:src/Other.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.Problem"
    },
    {
      "kind": "contains",
      "repo_id": "fallback",
      "source_id": "repo:fallback",
      "target_id": "repo:fallback:doc:src/Other.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.solve"
    },
    {
      "kind": "contains",
      "repo_id": "fallback",
      "source_id": "repo:fallback",
      "target_id": "repo:fallback:doc:src/solvers.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.fastsolve"
    },
    {
      "kind": "contains",
      "repo_id": "fallback",
      "source_id": "repo:fallback",
      "target_id": "repo:fallback:doc:src/nested/extra.jl#symbol-id:repo:fallback:symbol:FallbackPkgAlt.ExtraProblem"
    },
    {
      "kind": "documents",
      "repo_id": "fallback",
      "source_id": "repo:fallback:doc:README.md",
      "target_id": "repo:fallback:module:FallbackPkgAlt"
    }
  ],
  "repository": {
    "dependencies": [
      "LinearAlgebra",
      "SciMLBase"
    ],
    "name": "FallbackPkg",
    "path": "[repo-root]",
    "repo_id": "fallback",
    "revision": "[revision]",
    "url": "https://example.invalid/xiuxian-wendao/fallbackpkg.git",
    "uuid": "12345678-1234-1234-1234-123456789abc",
    "version": "0.1.0"
  },
  "symbols": [
    {
      "attributes": {
        "parser_kind": "type",
        "top_level": "true",
        "type_kind": "struct"
      },
      "audit_status": "unreviewed",
      "kind": "type",
      "line_end": 7,
      "line_start": 5,
      "module_id": "repo:fallback:module:FallbackPkgAlt",
      "name": "ExtraProblem",
      "path": "src/nested/extra.jl",
      "qualified_name": "FallbackPkgAlt.ExtraProblem",
      "repo_id": "fallback",
      "signature": "struct ExtraProblem",
      "symbol_id": "repo:fallback:symbol:FallbackPkgAlt.ExtraProblem",
      "verification_state": "verified"
    },
    {
      "attributes": {
        "module_kind": "module",
        "module_name": "FallbackPkgAlt",
        "module_path": "FallbackPkgAlt",
        "owner_kind": "module",
        "owner_name": "FallbackPkgAlt",
        "owner_path": "FallbackPkgAlt",
        "parser_kind": "type",
        "top_level": "true",
        "type_kind": "struct"
      },
      "audit_status": "unreviewed",
      "kind": "type",
      "line_end": 13,
      "line_start": 11,
      "module_id": "repo:fallback:module:FallbackPkgAlt",
      "name": "Problem",
      "path": "src/Other.jl",
      "qualified_name": "FallbackPkgAlt.Problem",
      "repo_id": "fallback",
      "signature": "struct Problem",
      "symbol_id": "repo:fallback:symbol:FallbackPkgAlt.Problem",
      "verification_state": "verified"
    },
    {
      "attributes": {
        "function_has_varargs": "false",
        "function_keyword_arity": "0",
        "function_positional_arity": "1",
        "parser_kind": "function",
        "top_level": "true"
      },
      "audit_status": "unreviewed",
      "kind": "function",
      "line_end": 5,
      "line_start": 5,
      "module_id": "repo:fallback:module:FallbackPkgAlt",
      "name": "fastsolve",
      "path": "src/solvers.jl",
      "qualified_name": "FallbackPkgAlt.fastsolve",
      "repo_id": "fallback",
      "signature": "fastsolve(problem::Problem) = problem.x",
      "symbol_id": "repo:fallback:symbol:FallbackPkgAlt.fastsolve",
      "verification_state": "verified"
    },
    {
      "attributes": {
        "function_has_varargs": "false",
        "function_keyword_arity": "0",
        "function_positional_arity": "1",
        "module_kind": "module",
        "module_name": "FallbackPkgAlt",
        "module_path": "FallbackPkgAlt",
        "owner_kind": "module",
        "owner_name": "FallbackPkgAlt",
        "owner_path": "FallbackPkgAlt",
        "parser_kind": "function",
        "top_level": "true"
      },
      "audit_status": "unreviewed",
      "kind": "function",
      "line_end": 20,
      "line_start": 18,
      "module_id": "repo:fallback:module:FallbackPkgAlt",
      "name": "solve",
      "path": "src/Other.jl",
      "qualified_name": "FallbackPkgAlt.solve",
      "repo_id": "fallback",
      "signature": "solve(problem::Problem)",
      "symbol_id": "repo:fallback:symbol:FallbackPkgAlt.solve",
      "verification_state": "verified"
    }
  ]
}
